# advent-of-code-rust-2024

./: Cargo.toml  README.md
.cargo/: config.toml
src/: template.txt
